# tool-cognition

./: README.md
dat/: README.txt
src/: README.txt  Readme
src/cvision_ws/: CMakeLists.txt  package.xml
src/cvision_ws/msg/: pcl_vector.msg  vision_msgs.msg
src/doxygen/: How_to_doxygen.txt  doxygen_config
src/doxygen/html/: annotated.html  annotated_dup.js  classCreate__Tool-members.html  classCreate__Tool.html  classCreate__Tool.js  classGJK-members.html  classGJK.html  classGJK.js  classKDL__IK-members.html  classKDL__IK.html  classKDL__IK.js  classM3MoveGroup-members.html  classM3MoveGroup.html  classM3MoveGroup.js  classMCT__NODE-members.html  classMCT__NODE.html  classMCT__NODE.js  classMCT__NODE2-members.html  classMCT__NODE2.html  classMCT__NODE2.js  classMCT__NODE2__coll__graph.map  classMCT__NODE2__coll__graph.md5  classMCT__NODE__coll__graph.map  classMCT__NODE__coll__graph.md5  classMCT__Search-members.html  classMCT__Search.html  classMCT__Search.js  classMCT__Search2-members.html  classMCT__Search2.html  classMCT__Search2.js  classMCT__Search2__coll__graph.map  classMCT__Search2__coll__graph.md5  classMCT__Search__coll__graph.map  classMCT__Search__coll__graph.md5  classMOVEIT__IK-members.html  classMOVEIT__IK.html  classMOVEIT__IK.js  classRecorder-members.html  classRecorder.html  classRecorder.js  (+381 more)
src/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  (+59 more)
src/doxygen/latex/: annotated.tex  classCreate__Tool.tex  classGJK.tex  classKDL__IK.tex  classM3MoveGroup.tex  classMCT__NODE.tex  classMCT__NODE2.tex  classMCT__NODE2__coll__graph.md5  classMCT__NODE__coll__graph.md5  classMCT__Search.tex  classMCT__Search2.tex  classMCT__Search2__coll__graph.md5  classMCT__Search__coll__graph.md5  classMOVEIT__IK.tex  classRecorder.tex  classRecorder__coll__graph.md5  classTool__Expt.tex  classTool__Expt__2.tex  classTool__Expt__2__coll__graph.md5  classTool__Expt__2__inherit__graph.md5  classTool__Expt__coll__graph.md5  classTool__Expt__inherit__graph.md5  classmove__fingers_1_1MoveFingers.tex  create__tool_8h.tex  create__tool_8h__dep__incl.md5  create__tool_8h__incl.md5  definitions_8h.tex  definitions_8h__dep__incl.md5  dir_105c047ec7917291728c7652eab04cc9.tex  dir_179feadc076e4817439879229e713c9c.tex  dir_19c2401b1a5761383a21dc8f3c18241c.tex  dir_24eb99816b445aadab14aebf8698ec39.tex  dir_2a68e7406eb373dfd8e17d99e3dc7f17.tex  dir_8603e067e2703f69adcfe1215b7303f1.tex  dir_a4ddae9b9c5217ca42e8f936982e17fd.tex  dir_ddf77125f385611648bd6bd145556a3a.tex  dir_fce6e94ce6bac4738932df40f2ade93b.tex  dir_fd69fd70c7830f880037fa909f17631a.tex  dir_fddb3a3534559112ba5d33a1d5847eb4.tex  files.tex  (+124 more)
src/kaist_msgs/: CMakeLists.txt  package.xml
src/kaist_msgs/include/kaist_msgs/: mytcp_defs.h  requester_ids.h  rostopic_defs.h
src/kaist_msgs/msg/: AddNoiseRequest.msg  AddNoiseResponse.msg  BoardConnectionStatus.msg  CommandCenterControlRequest.msg  CommandCenterControlResponse.msg  DataErrorsStatus.msg  EStopRequest.msg  FTSensorControlRequest.msg  FTSensorControlResponse.msg  FingerMoveRequest.msg  GestureMoveRequest.msg  GestureMoveResponse.msg  GestureNeckPan.msg  IKData.msg  IKDataJointReferenceStatus.msg  IKDataMoveRequest.msg  IKDataMoveResponse.msg  InitFindHomeRequest.msg  JointReferenceStatus.msg  MoveJointRequest.msg  MoveJointResponse.msg  PODOALStatusResponse.msg  PlannedMoveRequest.msg  PlannedMoveRequest.msg~  PlannedMoveResponse.msg  PredefinedMoveRequest.msg  PredefinedMoveResponse.msg  StartALRequest.msg  WristMoveRequest.msg  WristMoveResponse.msg
src/m3_moveit/: CMakeLists.txt  package.xml
src/m3_moveit/planning/: CMakeLists.txt
src/m3_moveit/planning/action/: MoveitCollide.action  MoveitDual.action  MoveitExec.action  MoveitFingers.action  MoveitFingersEncoders.action  MoveitPickPlace.action  MoveitSingle.action  MoveitTorsoArms.action  MoveitWholeBody.action  NeckTilt.action  Pickup.action  Place.action
src/m3_moveit/planning/src/: move_group_action_server.cpp  move_group_action_server_fixed.cpp
src/montecarlo/: CMakeLists.txt  package.xml
src/montecarlo/include/tool_expt/: create_tool.h  definitions.h  gjk.h  kdl_ik.h  machine.h  manipulate.h  moveit_ik.h  node.h  node2.h  recorder.h  search.h  search2.h  tool_expt.h  tool_expt2.h  vision_data.h
src/montecarlo/msg/: calib.msg
src/montecarlo/python/: move_fingers.py
src/montecarlo/src/: create_tool.cpp  dynamic_tf_broadcaster.cpp  gjk.cpp  home.cpp  machine.cpp  machine_sim.cpp  manipulate.cpp  manipulate_action.cpp  manipulate_mcst.cpp  manipulate_mcst_2.cpp  manipulate_mcst_2_left.cpp  manipulate_mcst_3_left.cpp  manipulate_reachable.cpp  manipulate_vision.cpp  manipulate_vision_2.cpp  node.cpp  node2.cpp  recorder.cpp  rosbag_getxy.cpp  search.cpp  search2.cpp  sim_reach_boundary.cpp  tool_expt.cpp  tool_expt2.cpp  tool_expt_pipeline.cpp
src/montecarlo/src/boundary/: boundary_back.txt  boundary_side.txt  reachability_back.txt  reachability_forw.txt
src/montecarlo/srv/: tf_switch.srv
