<?xml version="1.0"?>
<package>
  <name>m3_moveit</name>
  <version>0.5.7</version>
  <description>The moveit action server package</description>

  <!--moveit-->
  <!--maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>
  <author email="sachinc@willowgarage.com">Sachin Chitta</author-->
  
  <maintainer email="samuel_cheong@i2r.a-star.edu.sg">Samuel Cheong</maintainer>
  <license>TBC</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>industrial_trajectory_filters_mod</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>industrial_trajectory_filters_mod</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
